--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "nodemailer": "^4.4.0"
+    "nodemailer": "^4.4.0",
+    "unirest": "^0.6.0"
   }
 }
